# momenta

./: CHANGELOG.md  README.md  codemeta.json  environment.yaml  pyproject.toml
examples/: Example_tabulated.ipynb  full_example.ipynb  handson_tutorial.ipynb  stacking_example.ipynb  superkamiokande.ipynb  tabulated_flux.ipynb
examples/input_files/: config.yaml  detector.yaml
src/momenta/io/: __init__.py  gw.py  neutrinos.py  neutrinos_irfs.py  parameters.py  stacking.py  transient.py
src/momenta/stats/: bayes_factor.py  constraints.py  model.py  run.py
src/momenta/utils/: conversions.py  flux.py
tests/: test_model.py  test_neutrinos.py  test_run.py
