[project]
name = "momenta"
authors = [{name = "Mathieu Lamoureux"}]
version = "1.0"
dependencies = [
    "awkward",
    "astropy",
    "cached_property",
    "datetime",
    "h5py",
    "healpy",
    "ligo.skymap",
    "matplotlib",
    "numpy",
    "pandas",
    "pyyaml",
    "scipy",
    "typing",
    "ultranest"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Physics",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "pytest-cov",
    "pytest-flake8",
    "pytest-pylint",
    "pytest-watch",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = [
	"pass",
	"pragma: no cover",
	"raise AssertionError",
	"raise NotImplementedError",
	"if 0:",
	"if False:",
]

[tool.coverage.html]
directory = "coverage_html_report"

[tool.black]
line-length = 150
